<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">Metal Only</string>
    <string name="app_version">0.4.9 (Beta)</string>

    <!-- menu -->
    <string name="menu">Menü</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_favorites">Favoriten</string>
    <string name="menu_history">Verlauf</string>
    <string name="menu_donation">Spende</string>
    <string name="menu_info">Info</string>

    <!-- errors -->
    <string name="error_initialize_player">Fehler beim Erstellen des Players</string>
    <string name="error_player32">AAC+ Decoder-Fehler</string>

    <!-- standard text -->
    <string name="ok">OK</string>
    <string name="abort">Abbruch</string>
    <string name="back">Zurück</string>
    <string name="next">Weiter</string>
    <string name="empty"></string>
    <string name="attention">Achtung</string>
    <string name="no">Nein</string>
    <string name="yes">Ja</string>

    <!-- days of week -->
    <string-array name="days">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
        <item>Samstag</item>
        <item>Sonntag</item>
    </string-array>

    <!-- stream -->
    <string name="connecting">Verbinde</string>
    <string name="timeout">Zeitüberschreitung</string>
    <string name="playing">Stream wird jetzt wiedergegeben</string>
    <string name="internet_timeout">Die Wiedergabe wurde unterbrochen, da momentan keine Internetverbindung existiert.</string>

    <!-- wish activity -->
    <string name="wish_regards">Wunsch / Gruß</string>
    <string name="wish_send">Senden</string>
    <string name="wish_regard">Gruß:</string>
    <string name="wish_nick">Nick:</string>
    <string name="artist">Artist:</string>
    <string name="title">Titel:</string>
    <string name="sent">Erfolgreich gesendet</string>
    <string name="sending_error">Fehler beim Senden</string>
    <string name="impossible">Nicht möglich</string>
    <string name="no_wishes">Sorry, die Playlist ist bereits voll. Es sind keine weiteren Wünsche mehr möglich.</string>
    <string name="no_wishes_short">Zur Zeit sind keine Wünsche möglich</string>
    <string name="no_regards">Zur Zeit sind keine Grüße möglich</string>
    <string name="no_wishes_and_regards">Zur Zeit sind keine Wünsche oder Grüße möglich.</string>
    <string name="wish_explanation">Wünsche und Grüße sind nur während der moderierten Sendezeit möglich. Das Team von Metal Only behält es sich vor, Wünsche nicht zu spielen und Grüße nicht vorzulesen, ohne eine Begründung dafür zu nennen. Kein Moderator ist dazu verpflichtet einen Gruß vorzulesen oder einen Wunsch zu erfüllen. Insbesondere gilt dies für Wünsche, die nicht den Genrevorgaben der Sendung entsprechen. Aufgrund der hohen Grußfrequenz entscheidet jeder Moderator selbst, welche Grüße vorgelesen werden. Dies ist nicht als Wertung des Grüßenden oder des Gegrüßten zu verstehen.</string>
    <string name="no_moderator">Wünsche und Grüsse sind nur in der moderierten Sendezeit möglich!</string>
    <string name="per_user">pro Hörer</string>
    <string name="invalid_input">Unvollständige Eingabe!</string>
    <string name="communicating">Kommuniziere mit Server</string>
    <string name="menu_help">Hilfe</string>

    <!-- paypal donation -->
    <string name="paypal">PayPal Spende</string>
    <string name="donation_receiver">An:</string>
    <string name="donation_receiverPaypal">metalonly@gmx.de</string>
    <string name="donation_donator">Von:</string>
    <string name="donation_value">Betrag in €:</string>
    <string name="donation_toPaypal">zu PayPal</string>

    <string-array name="from_array">
        <item>Anonym</item>
    </string-array>
    <string-array name="value_array">
        <item>5 €</item>
        <item>10 €</item>
        <item>25 €</item>
    </string-array>

    <string name="paypal_description1">&lt;p&gt;An dieser Stelle k&amp;ouml;nnen Sie eine Spende an Metal Only &amp;uuml;ber den Zahlungsdienst PayPal senden (hierzu m&amp;uuml;ssen Sie nicht bei PayPal registriert sein).&lt;br&gt;Informationen und Kontoangaben finden Sie unter &lt;a href=http://www.metal-only.de/?action=donation &gt;www.metal-only.de/?action=donation&lt;/a&gt;.&lt;/p&gt;</string>
    <string name="paypal_description2">Um eine anonyme Spende zu machen, lassen Sie das \'Von\'-Feld einfach leer. Auf der Website von PayPal können Sie Ihre Angaben erneut überprüfen.</string>
    <string name="notification">Hinweis</string>
    <string name="donation_enter_from">Wer spendet?</string>
    <string name="donation_enter_value">Welchen Betrag spenden?</string>
    <string name="help">Hilfe</string>
    <string name="paypal_receiver">Empfänger</string>
    <string name="paypal_mail_mo">metalonly@gmx.de</string>
    <string name="paypal_sender">Spender</string>
    <string name="paypal_sender_dialog">Name des Spenders</string>
    <string name="paypal_value">Betrag</string>
    <string name="paypal_value_dialog">Wieviel € spenden?</string>
    <string name="paypal_send">Weiter</string>
    <string name="paypal_send_sum">Zur PayPal Website weiterleiten</string>
    <string name="paypal_info">Kontoinformationen</string>
    <string name="paypal_info_sum">Allgemeine Informationen über Spenden aufrufen</string>
    <string name="paypal_key_sender">MO_SP_SENDER</string>
    <string name="paypal_key_value">MO_SP_VALUE</string>
    <string name="paypal_key_send">MO_SP_SEND</string>
    <string name="paypal_key_info">MO_SP_INFO</string>
    <string name="paypal_default_sender">Anonym</string>
    <string name="paypal_default_value">5</string>
    <string name="paypal_category_inoformation">Informationen</string>
    <string name="paypal_category_paypal">PayPal Spende</string>

    <!-- SpinnerOwnValue -->
    <string name="other">Anderer</string>
    <string name="choose_other">Anderen Wert eingeben:</string>

    <!-- no internet -->
    <string name="no_internet">Keine Internetverbindung</string>
    <string name="open_internet_settings">Es besteht keine Verbindung zum Internet. Sollen die Netzwerkeinstellungen geöffnet werden?</string>

    <!-- settings -->
    <string name="settings_key_rate">KEY_RATE</string>
    <string name="settings_key_audio_buffer">KEY_AUDIO_BUFFER</string>
    <string name="settings_key_decoding_buffer">KEY_DECODING_BUFFER</string>
    <string name="settings_category_stream">Stream</string>
    <string name="settings_rate">Übertragungsrate</string>
    <string name="settings_rate_summary"></string>

    <string-array name="rate_label">
        <item>32 kb/s</item>
        <item>128 kb/s</item>
    </string-array>

    <string name="settings_audio_buffer">Audio-Puffer</string>
    <string name="settings_decoding_buffer">Decoding-Puffer</string>
    <string name="settings_buffer_hint">Kapazität in ms:</string>

    <!-- favorites -->
    <string-array name="favorite_options_array">
        <item>Wünschen</item>
        <item>Auf YouTube suchen</item>
        <item>Teilen</item>
        <item>Löschen</item>
    </string-array>

    <string name="menu_deleteall">Alle löschen</string>
    <string name="menu_shareall">Alle teilen</string>
    <string name="menu_add_mannually">Favorit hinzufügen</string>
    <string name="delete_sure">Wirklich alle Einträge entfernen?</string>

    <!-- other features -->
    <string name="plan">Sendeplan</string>
    <string name="volume">Lautstärke</string>

    <!-- history -->
    <string-array name="history_options_array">
        <item>Zu Favoriten hinzufügen</item>
        <item>Auf YouTube suchen</item>
        <item>Teilen</item>
    </string-array>

    <string name="fav_added">Erfolgreich hinzugefügt</string>
    <string name="fav_already_in">Titel ist bereits ein Favorit</string>

    <!-- about -->
    <string name="mailaddress_codingspezis">mail@codingspezis.com</string>
    <string name="url_codingspezis">http://www.codingspezis.com/</string>
    <string name="aboutThisApp">Diese App bringt den Internetstream von http://www.metal-only.de auf Android.\nEntwickelt wurde sie von den codingspezis (http://www.codingspezis.com).</string>
    <string name="url_opencore">https://android.googlesource.com/platform/external/opencore.git</string>
    <string name="url_aacdecoder">http://www.code.google.com/p/aacdecoder-android/</string>
    <string name="url_sherlock">https://github.com/JakeWharton/ActionBarSherlock/</string>
    <string name="url_lazylist">https://www.github.com/thest1/LazyList/</string>
    <string name="url_androidhive">http://www.androidhive.info/2012/02/android-custom-listview-with-image-and-text/</string>
    <string name="url_androidannotations">https://github.com/excilys/androidannotations/</string>
    <string name="about_category_app">App</string>
    <string name="about_name">Name:</string>
    <string name="about_version">Version:</string>
    <string name="about_web1">Web:</string>
    <string name="about_web2">metal-only.de</string>
    <string name="about_developers1">Entwickler:</string>
    <string name="about_developers2">codingspezis.com</string>
    <string name="about_mail">Feedback / Bug Report</string>
    <string name="about_category_libs">Verwendete Bibliotheken</string>
    <string name="about_link">Link:</string>
    <string name="about_license">Lizenz:</string>
    <string name="about_opencore">OpenCORE aacdec</string>
    <string name="about_aacdecoder">AAC Decoder for Android</string>
    <string name="about_lazylist">LazyList</string>
    <string name="about_sherlock">ActionBarSherlock</string>
    <string name="about_androidannotations">androidannotations</string>
    <string name="about_tutorial">Android Custom ListView</string>
    <string name="apl2">Apache 2.0</string>
    <string name="lgpl">LGPL</string>
    <string name="mit">MIT</string>
    <string name="no_mail_app">Keine E-Mail Anwendung gefunden.</string>

    <!-- plan -->
    <string-array name="plan_options_array">
        <item>Zu Kalender hinzufügen</item>
        <item>Teilen</item>
    </string-array>

    <string name="play">Abspielen</string>
    <!-- \u0020 forced space -->
    <string name="stop">Stop</string>
    <string name="play_paus">Abspielen/Pause</string>
    <string name="date">Datum</string>
    <string name="time">Time</string>
    <string name="moderator">Moderator</string>
    <string name="colon">:</string>

    <!-- Layouting texts -->

    <string name="artistDummy">A very long dummy text for an artist\'s name</string>
    <string name="genreDummy">A very long dummy text for a show\'s genre</string>
    <string name="titleDummy">A very long dummy text for a song\'s or show\'s title</string>
    <string name="emptySongHistory">Hier werden die letzten Lieder angezeigt, die du mit dieser App angehört hast.\n\nDrück einfach auf "Play" um anzufangen.\n\n(Es kann ein paar Sekunden dauern, bis das aktuelle Lied angezeigt wird.)</string>
    <string name="loading_plan">Plan wird geladen.</string>
    <string name="no_favorites">Füge Favoriten hinzu, um diese hier zu sehen.</string>

</resources>