<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--
    <item android:id="@+id/new_game"
          android:icon="@drawable/ic_new_game"
          android:title="@string/new_game"
          android:showAsAction="ifRoom" />
    -->
    <item
    	android:id="@+id/menu_sub"
        android:title="@string/menu" />
    <item
    	android:id="@+id/favorites"
        android:title="@string/menu_favorites" />
    <item
    	android:id="@+id/website"
        android:title="@string/menu_website" />
    <item
    	android:id="@+id/donation"
        android:title="@string/menu_donation" />
    <item
    	android:id="@+id/settings"
        android:title="@string/menu_settings" />
    <item
    	android:id="@+id/info"
        android:title="@string/menu_info" />

</menu>