<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	
        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
        <!-- category app -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/about_category_app"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <!-- name -->
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_name"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
            <TextView
                android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/app_name"
	            android:textStyle="bold"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="2" />
    	</LinearLayout>
        
        <!-- version -->
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_version"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/app_version"
	            android:textStyle="bold"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="2" />
        </LinearLayout>
        
        <!-- web -->
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_web1"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/metalonly"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_web2"
	            android:textStyle="bold"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="2"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
        <!-- codingspezis -->
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_developers1"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/codingspezis"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_developers2"
	            android:textStyle="bold"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="2"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
        <!-- mail -->
        <Button
	        android:id="@+id/mailus"
	        android:layout_width="fill_parent"
	        android:layout_margin="5dp"
	        android:text="@string/about_mail"
	        android:layout_height="wrap_content" />
        
        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
        <!-- category libs -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/about_category_libs"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <!-- opencore -->
        <TextView
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_opencore"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_link"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/opencore"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/url_opencore"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_license"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/apl2_opencore"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/apl2"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
        <!-- aacdecoder -->
        <TextView
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_aacdecoder"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_link"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/aacdecoder"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/url_aacdecoder"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_license"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/lgpl"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/lgpl"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
        <!-- sherlock -->
        <TextView
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_sherlock"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_link"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/sherlock"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/url_sherlock"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_license"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/apl2_sherlock"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/apl2"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
        <!-- lazylist -->
        <TextView
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_lazylist"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_link"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/lazylist"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/url_lazylist"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_license"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/mit"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/mit"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
        <!-- tutorial -->
        <TextView
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_tutorial"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    	<TextView
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/about_link"
	            android:layout_marginLeft="5dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="1" />
	    	<TextView
	    	    android:id="@+id/tutorial"
	    	    android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/url_androidhive"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_weight="3"
	            android:textColor="#ff33b5e5" />
        </LinearLayout>
        
    </LinearLayout>
</ScrollView>