<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/elementMargin" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textAppName"
            android:layout_marginTop="@dimen/elementMargin"
            android:layout_toRightOf="@+id/textAppName"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textAboutApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textAppName"
            android:layout_marginTop="@dimen/elementMarginDouble"
            android:autoLink="web"
            android:text="@string/aboutThisApp" />

        <Button
            android:id="@+id/buttonFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAboutApp"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="@string/about_mail" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/buttonFeedback"
            android:layout_marginTop="@dimen/elementMargin"
            android:src="@drawable/grey_horizontal_line"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textOpencoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider"
            android:layout_marginTop="@dimen/elementMarginDouble"
            android:text="@string/about_opencore"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textOpencoreLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textOpencoreName"
            android:layout_marginTop="@dimen/elementMargin"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/url_opencore" />

        <TextView
            android:id="@+id/textOpencoreLicenseApache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textOpencoreName"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="@string/apl2"
            android:textColor="@color/turkis" />

        <TextView
            android:id="@+id/textAacDecoderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textOpencoreLink"
            android:layout_marginTop="@dimen/elementMarginDouble"
            android:text="@string/about_aacdecoder"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textAacDecoderLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textAacDecoderName"
            android:layout_marginTop="@dimen/elementMargin"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/url_aacdecoder" />

        <TextView
            android:id="@+id/textAacDecoderLicenseLGPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textAacDecoderName"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="@string/lgpl"
            android:textColor="@color/turkis" />

        <TextView
            android:id="@+id/textSherlockName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textAacDecoderLink"
            android:layout_marginTop="@dimen/elementMarginDouble"
            android:text="@string/about_sherlock"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSherlockLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textSherlockName"
            android:layout_marginTop="@dimen/elementMargin"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/url_sherlock" />

        <TextView
            android:id="@+id/textSherlockLicenseApache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textSherlockName"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="@string/apl2"
            android:textColor="@color/turkis" />

        <TextView
            android:id="@+id/textLazyListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textSherlockLink"
            android:layout_marginTop="@dimen/elementMarginDouble"
            android:text="@string/about_lazylist"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textLazyListLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textLazyListName"
            android:layout_marginTop="@dimen/elementMargin"
            android:autoLink="web"
            android:text="@string/url_lazylist" />

        <TextView
            android:id="@+id/textLazyListLicenseMIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textLazyListName"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="@string/mit"
            android:textColor="@color/turkis" />

        <TextView
            android:id="@+id/textAndroidannotationsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textLazyListLink"
            android:layout_marginTop="@dimen/elementMarginDouble"
            android:text="@string/about_androidannotations"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textAndroidannotationsLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textAndroidannotationsName"
            android:layout_marginBottom="@dimen/elementMargin"
            android:layout_marginTop="@dimen/elementMargin"
            android:autoLink="web"
            android:singleLine="true"
            android:text="@string/url_androidannotations" />

        <TextView
            android:id="@+id/textAndroidannotationsLicenseApache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textAndroidannotationsName"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="@string/apl2"
            android:textColor="@color/turkis" />
    </RelativeLayout>

</ScrollView>